welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:-6: error: Missing closing brace `}' assumed here
try {
^icyHot:1: error: expected class or object definition
def icyHot(temp1:Int, temp2:Int):Boolean = {
^